finished symbol table, minimal checks